modal with activation

--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
 				<button class="buttons-level__button" id="button1">2 уровень</button>
 				<button class="buttons-level__button" id="button2">3 уровень</button>
 				<button class="buttons-level__button" id="button3">4 уровень</button>
+				<button class="buttons-level__button" id="button4">Активируйте</button>
 			</div>
 		</section>
 
@@ -676,6 +677,21 @@
 
 			<span class="modal-form__not-recieve">Не получили инструкций для разблокировки?</span>
 			<span class="modal-form__not-recieve">Не получили инструкций для подтверждения?</span>
+		</div>
+
+		<div class="modal-close"></div>
+	</section>
+
+	<section class="modal modal--activate">
+		<div class="modal__character-wrapper">
+			<img src="img/brain-monster.png" alt="monster" class="modal__character">
+		</div>
+
+		<div class="modal__wrapper">
+			<h2 class="modal__header">Активируйте свой аккаунт</h2>
+			<p class="modal__text">Мы отправили вам письмо для подтверждения по адресу Frart.ua@gmail.com</p>
+			<p class="modal__text">Пожалуйста, подтвердите свой аккаунт по ссылке. Если Вы не получили письмо в течении нескольких секунд, пожалуйста проверьте папку Спам</p>
+			<button class="modal__button">Переслать письмо с активацией</button>
 		</div>
 
 		<div class="modal-close"></div>
