--- a/index.html
+++ b/index.html
@@ -725,16 +725,20 @@
 			<span class="level-modal__up-text">Вам доступно:</span>
 
 			<div class="level-modal__ability-wrapper">
-				<div class="level-ability">
+				<div class="level-ability level-ability--wide">
 					<div class="level-ability__header">Слот дня</div>
 					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 				</div>
-				<div class="level-ability">
+				<div class="level-ability level-ability--wide">
 					<div class="level-ability__header">100% кешбек</div>
 					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 				</div>
-				<div class="level-ability">
+				<div class="level-ability level-ability--wide">
 					<div class="level-ability__header">Коефицент 1:40</div>
+					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				</div>
+				<div class="level-ability level-ability--wide">
+					<div class="level-ability__header">Релоад бонус в размере 6000р (100$)</div>
 					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 				</div>
 			</div>
@@ -768,16 +772,20 @@
 			<span class="level-modal__up-text">Вам доступно:</span>
 
 			<div class="level-modal__ability-wrapper">
-				<div class="level-ability">
+				<div class="level-ability level-ability--wide">
 					<div class="level-ability__header">200$</div>
-					<p class="level-ability__text">бесдепозитный бонус 200$ единоразово</p>
+					<p class="level-ability__text">Бездепозитный бонус 200$ </p>
 				</div>
-				<div class="level-ability">
+				<div class="level-ability level-ability--wide">
 					<div class="level-ability__header">Приоритет</div>
-					<p class="level-ability__text">приоритетность в службе поддержки</p>
+					<p class="level-ability__text">Приоритетность в службе поддержки</p>
 				</div>
-				<div class="level-ability">
+				<div class="level-ability level-ability--wide">
 					<div class="level-ability__header">Коефицент 1:20</div>
+					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				</div>
+				<div class="level-ability level-ability--wide">
+					<div class="level-ability__header">Релоад бонус 50% до 200$</div>
 					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 				</div>
 			</div>
@@ -810,11 +818,11 @@
 			<span class="level-modal__up-text">Вам доступно:</span>
 
 			<div class="level-modal__ability-wrapper">
-				<div class="level-ability level-ability--fourth">
+				<div class="level-ability level-ability--wide">
 					<div class="level-ability__header">Дарим iPhone 7</div>
-					<p class="level-ability__text">либо цену на счёт без отыгрыша</p>
+					<p class="level-ability__text">Либо цену на счёт без отыгрыша</p>
 				</div>
-				<div class="level-ability level-ability--fourth">
+				<div class="level-ability level-ability--wide">
 					<div class="level-ability__header">2000$</div>
 					<p class="level-ability__text">Бездепозит с Вейджером X40</p>
 				</div>
@@ -826,7 +834,7 @@
 					<div class="level-ability__header">Релоад 50% до 2000$</div>
 				</div>
 				<div class="level-ability">
-					<div class="level-ability__header">Вывод не ограниченный</div>
+					<div class="level-ability__header">Приоритетные условия вывода денег</div>
 				</div>
 			</div>
 		</div>
