updated text on reload bonus page

--- a/reload-bonus.html
+++ b/reload-bonus.html
@@ -89,7 +89,7 @@
 			<div class="reload-bonus__wrapper">
 				<h1 class="reload-bonus__header">50% reload bonus</h1>
 				<div class="reload-bonus__text-wrapper">
-					<p class="reload-bonus__text">Каждый пользователь имеет право один раз и в любой день недели обратится в службу поддержки и получить этот замечательный бонус, сумма которого зависит от вашего уровня</p>
+					<p class="reload-bonus__text">Каждый пользователь имеет право один раз и в любой день недели воспользоваться бонус-кодом Reload, сумма которого зависит от вашего уровня.</p>
 				</div>
 
 				<div class="levels">
