--- a/blog-one-news.html
+++ b/blog-one-news.html
@@ -53,7 +53,7 @@
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="reload-bonus.html">Reload бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">100% кэшбек</a></li>
+							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Кэшбек</a></li>
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
@@ -172,7 +172,7 @@
 						<ul class="games__list">
 							<li class="games__item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="games__item"><a href="#">Reload бонус</a></li>
-							<li class="games__item"><a href="everyweek-cashback.html">100% Кэшбек</a></li>
+							<li class="games__item"><a href="everyweek-cashback.html">Кэшбек</a></li>
 							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
