added description in cashback

--- a/everyweek-cashback.html
+++ b/everyweek-cashback.html
@@ -156,19 +156,27 @@
 			</div>
 		</section>
 
-
 		<section class="conditions">
 			<div class="conditions__wrapper">
-				<div class="condition">
+				<div class="condition condition--cashback">
 					<span class="condition__description">Каждому участнику после 23:00 (Мск) воскресенья будет вручён Тикет с номером на право участия в акции и выслан на почту</span>
 				</div>
 
-				<div class="condition">
+				<div class="condition condition--cashback">
 					<span class="condition__description">Все средства полученные в данной акции подлежат отыгрышу x3 (1-е место без вейджера)</span>
 				</div>
 
-				<div class="condition">
-					<span class="condition__description">Суммы компенсаций конфедециальны</span>
+				<div class="condition condition--cashback">
+					<span class="condition__description">Суммы компенсаций конфидециальны</span>
+				</div>
+			</div>
+		</section>
+
+		<section class="cashback-description">
+			<div class="cashback-description__wrapper">
+				<h2 class="cashback-description__header">50% кэшбек в Live Casino</h2>
+				<div class="cashback-description__text-wrapper">
+					<p class="cashback-description__text">Каждую субботу мы дарим игрокам 50% кешбек до 2000$ долларов , для этого внесите депозит в субботу с 01:00 до 23:59 МСК и если вы по итогу дня потерпели неудачу , мы возместим вам 50% от потерь ! Доступно для всех уровней. Правила те же что и для обычных слотов</p>
 				</div>
 			</div>
 		</section>
