added many updates

--- a/about.html
+++ b/about.html
@@ -345,14 +345,19 @@
 			</form>
 			<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
 
-			<form action="#">
+			<div class="fixed-bar__language">
+				<img src="img/flag-russian.png" alt="ru">
+				<span>Русский</span>
+			</div>
+
+			<!-- <form action="#">
 				<img src="img/flag-russian.png" alt="ru">
 				<select name="language" id="language" class="fixed-bar__language">
 					<option value="russian">Русский</option>
 					<option value="not-russian">Не русский</option>
 				</select>
-			</form>
-
+			</form> -->
+ 
 			<div class="top-games hidden">
 				<div class="top-games__wrapper">
 					<div class="top-games__slide">1</div>
@@ -369,7 +374,6 @@
 			</div>
 		</div>
 	</div>
-
 	<section class="modal modal--registration">
 		<div class="modal__character-wrapper">
 			<img src="img/rat.png" alt="rat" class="modal__character">
