--- a/everyweek-cashback.html
+++ b/everyweek-cashback.html
@@ -89,7 +89,7 @@
 			<div class="everyweek-cashback__wrapper">
 				<h2 class="everyweek-cashback__header">Еженедельный розыгрыш кэшбека</h2>
 				<span class="everyweek-cashback__back-text">#халяяява</span>
-				<p class="everyweek-cashback__text">Каждый понедельник мы с помощью генератора случайных чисел среди всех игроков, отберём 10 счастливчиков которые получат кешбек проиграных средств от 10% до 100%</p>
+				<p class="everyweek-cashback__text">Каждый <span>понедельник</span> мы с помощью генератора случайных чисел среди всех игроков, отберём 10 счастливчиков которые получат кешбек проиграных средств от 10% до 100%</p>
 
 				<div class="places">
 					<div class="places__item places__item--second">
@@ -172,14 +172,34 @@
 			</div>
 		</section>
 
-		<section class="cashback-description">
-			<div class="cashback-description__wrapper">
-				<h2 class="cashback-description__header">50% кэшбек в Live Casino</h2>
-				<div class="cashback-description__text-wrapper">
-					<p class="cashback-description__text">Каждую субботу мы дарим игрокам 50% кешбек до 2000$ долларов , для этого внесите депозит в субботу с 01:00 до 23:59 МСК и если вы по итогу дня потерпели неудачу , мы возместим вам 50% от потерь ! Доступно для всех уровней. Правила те же что и для обычных слотов</p>
+		<div class="cashback-image-wrapper">
+
+			<section class="cashback-description">
+				<div class="cashback-description__wrapper">
+					<h2 class="cashback-description__header">50% кэшбек в Live Casino</h2>
+					<div class="cashback-description__text-wrapper">
+						<p class="cashback-description__text">Каждую субботу!</p>
+					</div>
+					<span class="cashback-description__bottom">Каждую <span>субботу</span> мы дарим игрокам 50% кешбек до 2000$ долларов , для этого внесите депозит в субботу с 01:00 до 23:59 МСК и если вы по итогу дня потерпели неудачу , мы возместим вам 50% от потерь ! Доступно для всех уровней.</span>
 				</div>
-			</div>
-		</section>
+			</section>
+
+			<section class="conditions">
+				<div class="conditions__wrapper">
+					<div class="condition">
+						<span class="condition__description">Каждому участнику после 23:00 (Мск) воскресенья будет вручён Тикет с номером на право участия в акции и выслан на почту</span>
+					</div>
+
+					<div class="condition">
+						<span class="condition__description">Все средства полученные в данной акции подлежат отыгрышу x3 (1-е место без вейджера)</span>
+					</div>
+
+					<div class="condition">
+						<span class="condition__description">Суммы компенсаций конфидециальны</span>
+					</div>
+				</div>
+			</section>
+		</div>
 
 		<section class="registration">
 			<div class="registration__wrapper">
@@ -305,13 +325,18 @@
 			</form>
 			<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
 
-			<form action="#">
+			<div class="fixed-bar__language">
+				<img src="img/flag-russian.png" alt="ru">
+				<span>Русский</span>
+			</div>
+
+			<!-- <form action="#">
 				<img src="img/flag-russian.png" alt="ru">
 				<select name="language" id="language" class="fixed-bar__language">
 					<option value="russian">Русский</option>
 					<option value="not-russian">Не русский</option>
 				</select>
-			</form>
+			</form> -->
 
 			<div class="top-games hidden">
 				<div class="top-games__wrapper">
