--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		</div>
 	</header>
 
-	<div class="main-wrapper">
+	<div class="main-wrapper main-wrapper--triangles">
 
 		<section class="slider">
 			<div class="slide">
@@ -720,7 +720,7 @@
 	<section class="level-modal level-modal--second">
 		<div class="level-modal__wrapper">
 			<div class="level-modal__header-wrapper">
-				<span class="level-modal__number">2</span>
+				<span class="level-modal__number level-modal__number--second">2</span>
 
 				<div class="level-modal__greeting-wrapper">
 					<h3 class="level-modal__greeting">Поздравляем, вы получили</h3>
@@ -766,7 +766,7 @@
 	<section class="level-modal level-modal--third">
 		<div class="level-modal__wrapper">
 			<div class="level-modal__header-wrapper">
-				<span class="level-modal__number">3</span>
+				<span class="level-modal__number level-modal__number--third">3</span>
 
 				<div class="level-modal__greeting-wrapper">
 					<h3 class="level-modal__greeting">Поздравляем, вы получили</h3>
