--- a/levels.html
+++ b/levels.html
@@ -95,7 +95,7 @@
 				<section class="level-modal level-modal--static">
 					<div class="level-modal__wrapper">
 						<div class="level-modal__header-wrapper">
-							<span class="level-modal__number">1</span>
+							<span class="level-modal__number level-modal__number--first">1</span>
 
 							<div class="level-modal__greeting-wrapper">
 								<h4 class="level-modal__level">Уровень</h4>
@@ -119,7 +119,7 @@
 				<section class="level-modal level-modal--static">
 					<div class="level-modal__wrapper">
 						<div class="level-modal__header-wrapper">
-							<span class="level-modal__number">2</span>
+							<span class="level-modal__number level-modal__number--second">2</span>
 
 							<div class="level-modal__greeting-wrapper">
 								<h4 class="level-modal__level">Уровень</h4>
@@ -153,7 +153,7 @@
 				<section class="level-modal level-modal--static">
 					<div class="level-modal__wrapper">
 						<div class="level-modal__header-wrapper">
-							<span class="level-modal__number">3</span>
+							<span class="level-modal__number level-modal__number--third">3</span>
 
 							<div class="level-modal__greeting-wrapper">
 								<h4 class="level-modal__level">Уровень</h4>
@@ -219,6 +219,93 @@
 						<div class="level-modal__about">Необходимо набрать <span>100 000</span> очков. Для удержания уровня нужно набирать <span>20 000</span> очков ежемесячно.</div>
 					</div>
 				</section>
+			</div>
+		</section>
+
+		<section class="levels-ability">
+			<div class="levels-ability__wrapper">
+			<!-- <h2 class="levels-ability__header">Таблица <span>возможностей</span></h2> -->
+
+			<table class="ability-table">
+				<tr class="ability-table__header">
+					<td class="ability-table__cell">Бонусы и награды VIP статусов</td>
+					<td class="ability-table__cell">1 <!-- уровень --></td>
+					<td class="ability-table__cell">2 <!-- уровень --></td>
+					<td class="ability-table__cell">3 <!-- уровень --></td>
+					<td class="ability-table__cell">Dark Knight</td>
+				</tr>
+
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">Приветсвенный бонус 1800$</td>
+					<td class="ability-table__cell"><img src="img/places/star-low.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fifth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-sixth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">Релоад бонус 50% (50$-2000$)</td>
+					<td class="ability-table__cell"><img src="img/places/star-low.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fifth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-sixth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">Фри спины</td>
+					<td class="ability-table__cell"><img src="img/places/star-low.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fifth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-sixth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">Слот дня</td>
+					<td class="ability-table__cell"><img src="img/places/star-low.png" alt=""</td>
+					<td class="ability-table__cell"><img src="img/places/star-fifth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-sixth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">Турниры</td>
+					<td class="ability-table__cell"><img src="img/places/star-low.png" alt=""</td>
+					<td class="ability-table__cell"><img src="img/places/star-fifth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-sixth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">50% кешбек live casino</td>
+					<td class="ability-table__cell"><img src="img/places/star-low.png" alt=""</td>
+					<td class="ability-table__cell"><img src="img/places/star-fifth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-sixth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">100% кэшбек</td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"><img src="img/places/star-fifth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-sixth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">Бездепозитный бонус 200$</td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"><img src="img/places/star-sixth.png" alt=""></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">Бездепозитный бонус 2000$</td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">Apple Gadget</td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>	
+			</table>
 			</div>
 		</section>
 
@@ -309,13 +396,18 @@
 			</form>
 			<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
 
-			<form action="#">
+			<div class="fixed-bar__language">
+				<img src="img/flag-russian.png" alt="ru">
+				<span>Русский</span>
+			</div>
+
+			<!-- <form action="#">
 				<img src="img/flag-russian.png" alt="ru">
 				<select name="language" id="language" class="fixed-bar__language">
 					<option value="russian">Русский</option>
 					<option value="not-russian">Не русский</option>
 				</select>
-			</form>
+			</form> -->
 
 			<div class="top-games hidden">
 				<div class="top-games__wrapper">
