--- a/tournament.html
+++ b/tournament.html
@@ -138,15 +138,15 @@
 						<ul class="prizes-table__column prizes-table__column--right">
 							<li class="prizes-table__item">
 								<div class="prizes-table__place">4 место</div>
-								<div class="prizes-table__amount">300$</div>
+								<div class="prizes-table__amount">50$</div>
 							</li>
 							<li class="prizes-table__item">
 								<div class="prizes-table__place">5-9 место</div>
-								<div class="prizes-table__amount">150$</div>
+								<div class="prizes-table__amount">20$</div>
 							</li>
 							<li class="prizes-table__item">
 								<div class="prizes-table__place">10-30 место</div>
-								<div class="prizes-table__amount">100$</div>
+								<div class="prizes-table__amount">15$</div>
 							</li>
 						</ul>
 					</div>
@@ -576,14 +576,19 @@
 			</form>
 			<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
 
-			<form action="#">
+			<div class="fixed-bar__language">
+				<img src="img/flag-russian.png" alt="ru">
+				<span>Русский</span>
+			</div>
+
+			<!-- <form action="#">
 				<img src="img/flag-russian.png" alt="ru">
 				<select name="language" id="language" class="fixed-bar__language">
 					<option value="russian">Русский</option>
 					<option value="not-russian">Не русский</option>
 				</select>
-			</form>
-
+			</form> -->
+ 
 			<div class="top-games hidden">
 				<div class="top-games__wrapper">
 					<div class="top-games__slide">1</div>
