--- a/partners.html
+++ b/partners.html
@@ -249,14 +249,19 @@
 			</form>
 			<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
 
-			<form action="#">
+			<div class="fixed-bar__language">
+				<img src="img/flag-russian.png" alt="ru">
+				<span>Русский</span>
+			</div>
+
+			<!-- <form action="#">
 				<img src="img/flag-russian.png" alt="ru">
 				<select name="language" id="language" class="fixed-bar__language">
 					<option value="russian">Русский</option>
 					<option value="not-russian">Не русский</option>
 				</select>
-			</form>
-
+			</form> -->
+ 
 			<div class="top-games hidden">
 				<div class="top-games__wrapper">
 					<div class="top-games__slide">1</div>
