--- a/bonus.html
+++ b/bonus.html
@@ -57,6 +57,7 @@
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 					</li>
 
@@ -69,7 +70,6 @@
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Правила и условия</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
-							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 
 					</li>
@@ -89,24 +89,24 @@
 			<div class="greeting-bonus__wrapper">
 
 				<h2 class="greeting-bonus__header">Приветственный бонус</h2>
-				<span class="greeting-bonus__count">90000 руб</span>
+				<span class="greeting-bonus__count">1800$</span>
 
 				<div class="deposit deposit--first">
 					<span class="deposit__percents">100%</span>
 					<span class="deposit__number">Первый депозит</span>
-					<span class="deposit__undertext">(до 35 т.р.)</span>
+					<span class="deposit__undertext">(до 600$)</span>
 				</div>
 
 				<div class="deposit deposit--second">
 					<span class="deposit__percents">50%</span>
 					<span class="deposit__number">Второй депозит</span>
-					<span class="deposit__undertext">(до 35 т.р.)</span>
+					<span class="deposit__undertext">(до 600$)</span>
 				</div>
 
 				<div class="deposit deposit--third">
 					<span class="deposit__percents">200%</span>
 					<span class="deposit__number">Третий депозит</span>
-					<span class="deposit__undertext">(до 35 т.р.)</span>
+					<span class="deposit__undertext">(до 600$)</span>
 				</div>
 
 				<div class="greeting-bonus__button-wrapper">
@@ -114,12 +114,14 @@
 				</div>
 
 				<div class="condition">
-					<span class="condition__count">500 руб</span>
+					<span class="condition__count">10$</span>
+					<span class="condition__count-description">(или эквивалент)</span>
 					<span class="condition__description">Минимальный депозит</span>
 				</div>
 
 				<div class="condition">
-					<span class="condition__count">35 000 руб</span>
+					<span class="condition__count">600$</span>
+					<span class="condition__count-description">(или эквивалент)</span>
 					<span class="condition__description">Максимальный размер бонуса</span>
 				</div>
 
@@ -194,6 +196,7 @@
 							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="games__item"><a href="levels.html">Уровни</a></li>
 						</ul>
 					</div>
 
@@ -202,7 +205,6 @@
 						<ul class="games__list">
 							<li class="games__item games__item--policy">Политика конфиденциальности</li>
 							<li class="games__item games__item--rules">Правила и условия</li>
-							<li class="games__item"><a href="levels.html">Уровни</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
 							<li class="games__item"><a href="about.html">О Darkslot</a></li>
@@ -225,6 +227,7 @@
 		<section class="partners">
 			<div class="partners__wrapper">
 				<img src="img/partners.png" alt="">
+				<p class="partners__text">Вебсайт Darkslot.com принадлежит компании Direx N.V., зарегистрированной и созданной в соответствии с законодательством Кюрасао и ее дочерним предприятием Direx Limited, зарегистрированными в Республике Кипр по адресу Stasinou 1, MITSI Building 1, 1st Floor, Flat/Office 4, Plateia Eleftherias, Nicosia. Деятельность Direx N.V. лицензирована и попадает под регулирование Antilephone N.V. Регистрационный номер Direx N.V.: 131879, адрес регистрации: E-Commerce Park Vredenberg, Curacao</p>
 			</div>
 		</section>
 
