--- a/everyweek-cashback.html
+++ b/everyweek-cashback.html
@@ -57,6 +57,7 @@
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 					</li>
 
@@ -69,7 +70,6 @@
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Правила и условия</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
-							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 
 					</li>
@@ -159,7 +159,7 @@
 		<section class="conditions">
 			<div class="conditions__wrapper">
 				<div class="condition condition--cashback">
-					<span class="condition__description">Каждому участнику после 23:00 (Мск) воскресенья будет вручён Тикет с номером на право участия в акции и выслан на почту</span>
+					<span class="condition__description">Каждому учаснику после 01:00 (МСК) воскресенья будет компенсирована сумма в размере 50% автоматически.</span>
 				</div>
 
 				<div class="condition condition--cashback">
@@ -167,7 +167,7 @@
 				</div>
 
 				<div class="condition condition--cashback">
-					<span class="condition__description">Суммы компенсаций конфидециальны</span>
+					<span class="condition__description">Минимальная сумма компенсации 5$. Суммы компенсаций конфидециальны</span>
 				</div>
 			</div>
 		</section>
@@ -187,7 +187,7 @@
 			<section class="conditions">
 				<div class="conditions__wrapper">
 					<div class="condition">
-						<span class="condition__description">Каждому участнику после 23:00 (Мск) воскресенья будет вручён Тикет с номером на право участия в акции и выслан на почту</span>
+						<span class="condition__description">Каждому учаснику после 01:00 (МСК) воскресенья будет компенсирована сумма в размере 50% автоматически.</span>
 					</div>
 
 					<div class="condition">
@@ -195,7 +195,7 @@
 					</div>
 
 					<div class="condition">
-						<span class="condition__description">Суммы компенсаций конфидециальны</span>
+						<span class="condition__description">Минимальная сумма компенсации 5$. Суммы компенсаций конфидециальны</span>
 					</div>
 				</div>
 			</section>
@@ -266,6 +266,7 @@
 							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="games__item"><a href="levels.html">Уровни</a></li>
 						</ul>
 					</div>
 
@@ -274,7 +275,6 @@
 						<ul class="games__list">
 							<li class="games__item games__item--policy">Политика конфиденциальности</li>
 							<li class="games__item games__item--rules">Правила и условия</li>
-							<li class="games__item"><a href="levels.html">Уровни</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
 							<li class="games__item"><a href="about.html">О Darkslot</a></li>
@@ -297,6 +297,7 @@
 		<section class="partners">
 			<div class="partners__wrapper">
 				<img src="img/partners.png" alt="">
+				<p class="partners__text">Вебсайт Darkslot.com принадлежит компании Direx N.V., зарегистрированной и созданной в соответствии с законодательством Кюрасао и ее дочерним предприятием Direx Limited, зарегистрированными в Республике Кипр по адресу Stasinou 1, MITSI Building 1, 1st Floor, Flat/Office 4, Plateia Eleftherias, Nicosia. Деятельность Direx N.V. лицензирована и попадает под регулирование Antilephone N.V. Регистрационный номер Direx N.V.: 131879, адрес регистрации: E-Commerce Park Vredenberg, Curacao</p>
 			</div>
 		</section>
 
