--- a/free-spins.html
+++ b/free-spins.html
@@ -57,6 +57,7 @@
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 					</li>
 
@@ -69,7 +70,6 @@
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Правила и условия</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
-							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 
 					</li>
@@ -93,7 +93,7 @@
 			<div class="free-spins__wrapper">
 				<div class="free-spins__header-wrapper">
 					<h2 class="free-spins__header">Бонусные фриспины по четвергам</h2>
-					<p class="free-spins__underheader-text">Внесите депозит от 20$ и получите бесплатные вращаения в игре Jack and the Beanstalk. Проведите четверг с DarkSlot и насладитесь атмосферой нашего казино. Так же не забывайте,  что для каждого игрока действует Reload bonus 50%, который можно получить один раз в любой день недели.</p>
+					<p class="free-spins__underheader-text">Внесите депозит от 20$ и получите бесплатные вращаения в игре Jack and the Beanstalk. Проведите четверг с DarkSlot и насладитесь атмосферой нашего казино. Так же не забывайте,  что для каждого игрока действует <a href="reload-bonus.html">Reload bonus</a>, который можно получить один раз в любой день недели.</p>
 				</div>
 
 				<a href="#" class="free-spins__button">Правила и условия</a>
@@ -109,19 +109,19 @@
 				<div class="statistics__columns-wrapper">
 					<div class="statistics__column">
 						<span class="statistics__number">20</span>
-						<span class="statistics__col-text">спинов на депозит 20$ (1000 р.)</span>
+						<span class="statistics__col-text">спинов на депозит 20$ (или эквивалент)</span>
 					</div>
 					<div class="statistics__column">
 						<span class="statistics__number">50</span>
-						<span class="statistics__col-text">спинов на депозит 50$ (2500р)</span>
+						<span class="statistics__col-text">спинов на депозит 50$ (или эквивалент)</span>
 					</div>
 					<div class="statistics__column">
 						<span class="statistics__number">100</span>
-						<span class="statistics__col-text">спинов на депозит 100$ (5000р)</span>
+						<span class="statistics__col-text">спинов на депозит 100$ (или эквивалент)</span>
 					</div>
 					<div class="statistics__column">
 						<span class="statistics__number">250</span>
-						<span class="statistics__col-text">спинов на депозит от 200$ (10000р)</span>
+						<span class="statistics__col-text">спинов на депозит от 200$ (или эквивалент)</span>
 					</div>
 				</div>
 				
@@ -200,6 +200,7 @@
 							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="games__item"><a href="levels.html">Уровни</a></li>
 						</ul>
 					</div>
 
@@ -208,7 +209,6 @@
 						<ul class="games__list">
 							<li class="games__item games__item--policy">Политика конфиденциальности</li>
 							<li class="games__item games__item--rules">Правила и условия</li>
-							<li class="games__item"><a href="levels.html">Уровни</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
 							<li class="games__item"><a href="about.html">О Darkslot</a></li>
@@ -227,10 +227,11 @@
 				</div>
 			</div>
 		</section>
-		
+
 		<section class="partners">
 			<div class="partners__wrapper">
 				<img src="img/partners.png" alt="">
+				<p class="partners__text">Вебсайт Darkslot.com принадлежит компании Direx N.V., зарегистрированной и созданной в соответствии с законодательством Кюрасао и ее дочерним предприятием Direx Limited, зарегистрированными в Республике Кипр по адресу Stasinou 1, MITSI Building 1, 1st Floor, Flat/Office 4, Plateia Eleftherias, Nicosia. Деятельность Direx N.V. лицензирована и попадает под регулирование Antilephone N.V. Регистрационный номер Direx N.V.: 131879, адрес регистрации: E-Commerce Park Vredenberg, Curacao</p>
 			</div>
 		</section>
 
