--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 					</li>
 
@@ -69,7 +70,6 @@
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Правила и условия</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
-							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 
 					</li>
@@ -487,6 +487,7 @@
 							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="games__item"><a href="levels.html">Уровни</a></li>
 						</ul>
 					</div>
 
@@ -495,7 +496,6 @@
 						<ul class="games__list">
 							<li class="games__item games__item--policy">Политика конфиденциальности</li>
 							<li class="games__item games__item--rules">Правила и условия</li>
-							<li class="games__item"><a href="levels.html">Уровни</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
 							<li class="games__item"><a href="about.html">О Darkslot</a></li>
@@ -518,6 +518,7 @@
 		<section class="partners">
 			<div class="partners__wrapper">
 				<img src="img/partners.png" alt="">
+				<p class="partners__text">Вебсайт Darkslot.com принадлежит компании Direx N.V., зарегистрированной и созданной в соответствии с законодательством Кюрасао и ее дочерним предприятием Direx Limited, зарегистрированными в Республике Кипр по адресу Stasinou 1, MITSI Building 1, 1st Floor, Flat/Office 4, Plateia Eleftherias, Nicosia. Деятельность Direx N.V. лицензирована и попадает под регулирование Antilephone N.V. Регистрационный номер Direx N.V.: 131879, адрес регистрации: E-Commerce Park Vredenberg, Curacao</p>
 			</div>
 		</section>
 
@@ -558,7 +559,7 @@
 					<option value="not-russian">Не русский</option>
 				</select>
 			</form> -->
- 
+
 			<div class="top-games hidden">
 				<div class="top-games__wrapper">
 					<div class="top-games__slide">1</div>
@@ -662,6 +663,7 @@
 			<form action="#" class="modal-form modal-form--contact">
 				<h2 class="modal-form__header">Форма контакта</h2>
 				<input type="email" class="modal-form__input" placeholder="Email">
+				<input type="text" class="modal-form__input" placeholder="Тема сообщения">
 				<textarea name="textarea-contact" id="text-contact" cols="30" rows="10" class="modal-form__text-field" placeholder="Текст..."></textarea>
 				<input type="submit" class="modal-form__button" value="Отправить">
 			</form>
