--- a/levels.html
+++ b/levels.html
@@ -57,6 +57,7 @@
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 					</li>
 
@@ -69,7 +70,6 @@
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Правила и условия</a></li>
 							<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
-							<li class="main-nav__dropdown-item"><a href="levels.html">Уровни</a></li>
 						</ul>
 
 					</li>
@@ -104,7 +104,7 @@
 
 						<div class="level-modal__ability-wrapper">
 							<div class="level-ability">
-								<div class="level-ability__header">Релоад бонус до 3 000 рублей</div>
+								<div class="level-ability__header">Релоад бонус до 50$</div>
 							</div>
 							<div class="level-ability">
 								<div class="level-ability__header">Фриспины на депозиты, турниры</div>
@@ -130,19 +130,19 @@
 						<div class="level-modal__ability-wrapper">
 							<div class="level-ability level-ability--wide">
 								<div class="level-ability__header">Слот дня</div>
-								<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+								<p class="level-ability__text">Возврат 50% проигранных средств в слоте дня.</p>
 							</div>
 							<div class="level-ability level-ability--wide">
-								<div class="level-ability__header">100% кешбек</div>
-								<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+								<div class="level-ability__header">Кэшбек</div>
+								<p class="level-ability__text">100% кэшбек в слотах и 50% в Live Casino</p>
 							</div>
 							<div class="level-ability level-ability--wide">
 								<div class="level-ability__header">Коефицент 1:40</div>
 								<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 							</div>
 							<div class="level-ability level-ability--wide">
-								<div class="level-ability__header">Релоад бонус в размере 6000р (100$)</div>
-								<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+								<div class="level-ability__header">Релоад бонус в размере 100$</div>
+								<p class="level-ability__text">Или его эквивалент в любой другой валюте.</p>
 							</div>
 						</div>
 
@@ -163,8 +163,8 @@
 
 						<div class="level-modal__ability-wrapper">
 							<div class="level-ability level-ability--wide">
-								<div class="level-ability__header">200$</div>
-								<p class="level-ability__text">Бездепозитный бонус 200$ </p>
+								<div class="level-ability__header">Релоад бонус 50% до 200$</div>
+								<p class="level-ability__text">Или его эквивалент в любой другой валюте</p>
 							</div>
 							<div class="level-ability level-ability--wide">
 								<div class="level-ability__header">Приоритет</div>
@@ -228,10 +228,10 @@
 
 			<table class="ability-table">
 				<tr class="ability-table__header">
-					<td class="ability-table__cell">Бонусы и награды VIP статусов</td>
-					<td class="ability-table__cell">1 <!-- уровень --></td>
-					<td class="ability-table__cell">2 <!-- уровень --></td>
-					<td class="ability-table__cell">3 <!-- уровень --></td>
+					<td class="ability-table__cell">Бонусы и награды статусов</td>
+					<td class="ability-table__cell">1 <span>уровень</span></td>
+					<td class="ability-table__cell">2 <span>уровень</span></td>
+					<td class="ability-table__cell">3 <span>уровень</span></td>
 					<td class="ability-table__cell">Dark Knight</td>
 				</tr>
 
@@ -305,6 +305,13 @@
 					<td class="ability-table__cell"></td>
 					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
 				</tr>	
+				<tr class="ability-table__row">
+					<td class="ability-table__cell">Личный менеджер</td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"></td>
+					<td class="ability-table__cell"><img src="img/places/star-fourth.png" alt=""></td>
+				</tr>	
 			</table>
 			</div>
 		</section>
@@ -337,6 +344,7 @@
 							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="games__item"><a href="levels.html">Уровни</a></li>
 						</ul>
 					</div>
 
@@ -345,7 +353,6 @@
 						<ul class="games__list">
 							<li class="games__item games__item--policy">Политика конфиденциальности</li>
 							<li class="games__item games__item--rules">Правила и условия</li>
-							<li class="games__item"><a href="levels.html">Уровни</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
 							<li class="games__item"><a href="about.html">О Darkslot</a></li>
@@ -368,6 +375,7 @@
 		<section class="partners">
 			<div class="partners__wrapper">
 				<img src="img/partners.png" alt="">
+				<p class="partners__text">Вебсайт Darkslot.com принадлежит компании Direx N.V., зарегистрированной и созданной в соответствии с законодательством Кюрасао и ее дочерним предприятием Direx Limited, зарегистрированными в Республике Кипр по адресу Stasinou 1, MITSI Building 1, 1st Floor, Flat/Office 4, Plateia Eleftherias, Nicosia. Деятельность Direx N.V. лицензирована и попадает под регулирование Antilephone N.V. Регистрационный номер Direx N.V.: 131879, адрес регистрации: E-Commerce Park Vredenberg, Curacao</p>
 			</div>
 		</section>
 
