--- a/day-slot.html
+++ b/day-slot.html
@@ -312,7 +312,27 @@
 
 		<section class="partners">
 			<div class="partners__wrapper">
-				<img src="img/partners.png" alt="">
+				<div class="partners__images">
+					<img src="img/partners/1_visa.jpg" alt="visa">
+					<img src="img/partners/2_mastercard.jpg" alt="mastercard">
+					<img src="img/partners/3_skrill.jpg" alt="skrill">
+					<img src="img/partners/4_netever.jpg" alt="netever">
+					<img src="img/partners/5_paysafecard.jpg" alt="pay safe card">
+					<img src="img/partners/6_trustly.svg" alt="trustly">
+					<img src="img/partners/7_zimpler.svg" alt="zimpler">
+					<img src="img/partners/8_responsivegaming.jpg" alt="responsive gaming">
+					<img src="img/partners/9_itechlab.jpg" alt="itech lab">
+					<img src="img/partners/10_safesecure.jpg" alt="safe secure">
+					<img src="img/partners/11_sealofapproval.png" alt="seal of approval">
+					<img src="img/partners/12_askgamblers.png" alt="ask gamblers">
+					<img src="img/partners/13_softswiss.jpg" alt="softswiss">
+					<img src="img/partners/14_netent.svg" alt="netent">
+					<img src="img/partners/15_amatic.svg" alt="amatic">
+					<img src="img/partners/16_ezugi.svg" alt="ezugi">
+					<img src="img/partners/17_bitcoin.png" alt="bitcoin">
+					<img src="img/partners/18.jpg" alt="18+">
+				</div>
+				
 				<p class="partners__text">Вебсайт Darkslot.com принадлежит компании Direx N.V., зарегистрированной и созданной в соответствии с законодательством Кюрасао и ее дочерним предприятием Direx Limited, зарегистрированными в Республике Кипр по адресу Stasinou 1, MITSI Building 1, 1st Floor, Flat/Office 4, Plateia Eleftherias, Nicosia. Деятельность Direx N.V. лицензирована и попадает под регулирование Antilephone N.V. Регистрационный номер Direx N.V.: 131879, адрес регистрации: E-Commerce Park Vredenberg, Curacao</p>
 			</div>
 		</section>
