policy, scroll in mobile menu

--- a/partners.html
+++ b/partners.html
@@ -54,6 +54,7 @@
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="reload-bonus.html">Reload бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Кэшбек</a></li>
+							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Кэшбек</a></li>
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
@@ -390,6 +391,7 @@
 			<form action="#" class="modal-form modal-form--contact">
 				<h2 class="modal-form__header">Форма контакта</h2>
 				<input type="email" class="modal-form__input" placeholder="Email">
+				<input type="text" class="modal-form__input" placeholder="Тема сообщения">
 				<textarea name="textarea-contact" id="text-contact" cols="30" rows="10" class="modal-form__text-field" placeholder="Текст..."></textarea>
 				<input type="submit" class="modal-form__button" value="Отправить">
 			</form>
@@ -621,18 +623,14 @@
 			<div class="modal-about__wrapper">
 				<h1 class="modal-about__header">Политика конфиденциальности</h1>
 				<div class="modal-about__scroll-content">
-					<h2 class="modal-about__underheader">1. Общие положения</h2>
 					<ul class="modal-about__list">
-						<li class="modal-about__list-item">1.1 Наша компания принимает ставки  для игр казино. Все ставки принимаются исключительно в соответствии с настоящими правилами и являются подтверждением того, что участник казино знает настоящие правила и полностью с ними согласен.</li>
-						<li class="modal-about__list-item">1.2 Казино вправе без предварительного личного уведомления вносить любые изменения и дополнения в изложенные здесь правила, положения и порядок осуществления выплат. При этом условия ранее сделанных ставок остаются неизменными, а все последующие ставки, подчиняются измененным правилам.</li>
-						<li class="modal-about__list-item">1.3 Регистрация, открытие депозита и совершение ставок разрешено исключительно лицам, достигшим 18 летнего возраста, на которых возлагается полная ответственность как за законность азартных игр через Интернет в регионе их проживания, так и за предоставление сведений о выигрышах или проигрышах компетентным органам своей страны.</li>
-						<li class="modal-about__list-item">1.4 Казино полностью доверяет информации, предоставляемой клиентом при подаче заявки на открытие счета, и ответственности за несоответствие вышеупомянутой информации действительности не несет.</li>
-					</ul><h2 class="modal-about__underheader">1. Общие положения</h2>
-					<ul class="modal-about__list">
-						<li class="modal-about__list-item">1.1 Наша компания принимает ставки  для игр казино. Все ставки принимаются исключительно в соответствии с настоящими правилами и являются подтверждением того, что участник казино знает настоящие правила и полностью с ними согласен.</li>
-						<li class="modal-about__list-item">1.2 Казино вправе без предварительного личного уведомления вносить любые изменения и дополнения в изложенные здесь правила, положения и порядок осуществления выплат. При этом условия ранее сделанных ставок остаются неизменными, а все последующие ставки, подчиняются измененным правилам.</li>
-						<li class="modal-about__list-item">1.3 Регистрация, открытие депозита и совершение ставок разрешено исключительно лицам, достигшим 18 летнего возраста, на которых возлагается полная ответственность как за законность азартных игр через Интернет в регионе их проживания, так и за предоставление сведений о выигрышах или проигрышах компетентным органам своей страны.</li>
-						<li class="modal-about__list-item">1.4 Казино полностью доверяет информации, предоставляемой клиентом при подаче заявки на открытие счета, и ответственности за несоответствие вышеупомянутой информации действительности не несет.</li>
+						<li class="modal-about__list-item">1. Игрок признает и подтверждает обоснованность действий казино DARKSLOT.com при запросе персональных данных игрока, необходимых для доступа к сайту, а также, для обеспечения игроку безопасного и максимально комфортного использования игр.</li>
+						<li class="modal-about__list-item">2. Казино DARKSLOT.com подтверждает, что при сборе персональных данных игрока, на казино DARKSLOT.com распространяется правовая мера "о защите персональных данных" Казино DARKSLOT.com обязано держать в сохранности личную информацию игрока, а также уважать конфиденциальность Игрока в соответствии с передовым деловым опытом и действующим законодательством.</li>
+						<li class="modal-about__list-item">3. Персональные данные игрока будут использоваться казино DARKSLOT.com исключительно для того, чтобы обеспечить игроку доступ к играм и проведения игроком операций, относящихся к использованию игр. Сотрудники казино DARKSLOT получают доступ к персональным данным Игрока исключительно в тех случаях, когда эта информация является необходимым условием для выполнения их служебных обязанностей.</li>
+						<li class="modal-about__list-item">4. Персональные данные игрока не будут переданы третьим лицам, если только подобное не является необходимым для обработки запросов игрока, связанных с использованием игр. Настоящим игрок соглашается на подобную передачу.</li>
+						<li class="modal-about__list-item">5. Игрок имеет право получить доступ к личной информации игрока, хранящейся в казино DARKSLOT.com, отправив запрос в письменном виде. Для принятия всех необходимых мер по обновлению персональных данных игрока, мы просим незамедлительно сообщить нам о любых изменениях в личной информации, хранящейся в казино DARKSLOT.com. В случае, если игрок считает, что информация о нём является неточной, неполной или некорректной, он вправе запросить её исправление. Кроме того, игрок имеет право запросить блокирование или удаление данных, которые были обработаны незаконно.</li>
+						<li class="modal-about__list-item">6. Для удобства пользования сайтом, а также для учёта посещаемости сайта и повышения качества обслуживания, казино DARKSLOT.com собирает cookie-файлы (небольшие информационные файлы), который высылает браузер игрока. Игрок может отключить сбор cookie-файлов (см. инструкции браузера о том, как это сделать), однако, нужно иметь в виду, что отключение сбора cookie-файлов может ограничить возможности игрока в использовании сайта.</li>
+						<li class="modal-about__list-item">7. Сайт регулярно предоставляет информацию об изменениях и/или дополнениях, о новых услугах и акциях, а также обо всём, что, по мнению сайта, может оказаться интересным и полезным для игрока. Если игрок не хочет получать новостные рассылки, он может отказаться от этой услуги в своем аккаунте.</li>
 					</ul>
 				</div>
 			</div>
