--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="reload-bonus.html">Reload бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Кэшбек</a></li>
-							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Кэшбек</a></li>
+							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Live Casino Cashback</a></li>
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
